# kapsule

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  REUSE.toml  arch-container.nspawn  kde-linux-file-list.txt.license  mkosi.conf  mkosi.postinst.chroot  nfpm.yaml  pyproject.toml  rest-api-v3.yaml  sysext.sh
.github/instructions/: cpp.instructions.md  models.instructions.md
.github/workflows/: build-deb.yml
data/: kapsule.conf  openapi.yaml
data/applications/: org.frostyard.Kapsule.desktop
data/dbus/system/: org.frostyard.Kapsule.conf  org.frostyard.Kapsule.service
data/modules-load.d/: kapsule.conf
data/systemd/system/: kapsule-daemon.service
data/systemd/system/incus-user.socket.d/: kapsule-socket-mode.conf
data/systemd/system/incus.service.d/: kapsule-log-dir.conf
data/systemd/system/incus.socket.d/: kapsule-socket-group.conf
docs/: ARCHITECTURE.md
docs/plans/: 2026-02-11-deb-packaging-design.md  2026-02-11-deb-packaging-plan.md  2026-02-11-gnome-migration-design.md  2026-02-11-gnome-migration-plan.md  TODO.md
scripts/: build-deb.sh  convert_swagger.py  generate_dbus_introspection.py  install-gnome-extensions.sh  kapsule-init.sh  test_incus_client.py  update_incus_models.py
src/: __init__.py
src/cli/: CMakeLists.txt  async_typer.py  config.py  daemon_client.py  decorators.py  incus_client.py  main.cpp  main.py  output.cpp  output.h  output.py  rang.hpp
src/daemon/: __init__.py  __main__.py  config.py  container_service.py  dbus_proxy.py  dbus_types.py  incus_client.py  models.generated.py  models_generated.py  operations.py  profile.py  service.py
src/gnome/nautilus/: kapsule-nautilus.py
src/gnome/shell-extension/: extension.js  metadata.json  stylesheet.css
src/incus/: __init__.py  client.py  models.py
src/kapsule/cli/: __init__.py  app.py  output.py
src/kapsule/client/: __init__.py  client.py  exceptions.py
src/kapsule/daemon/: __init__.py  __main__.py  container_service.py  dbus_types.py  incus_client.py  operations.py  ptyxis.py  service.py
src/kapsule/gnome/settings/: app.py  container_row.py  create_dialog.py  window.py
src/libkapsule-qt/: CMakeLists.txt  KapsuleConfig.cmake.in  container.cpp  container.h  kapsuleclient.cpp  kapsuleclient.h  types.cpp  types.h
tests/integration/: conftest.py  helpers.sh  run-tests.sh  test-container-lifecycle.sh  test-display-sockets.sh  test-list-containers.sh  test-nested-containers.sh  test_progress_signals.py
tests/unit/: test_cli.py  test_client.py  test_ptyxis.py
